<resources>
    <string name="app_name">PocketGuide</string>
    <string name="main_open_button">START ADVENTURE</string>
    <string name="destination">DESTINATIONS</string>
    <string name="destinationone">PARIS</string>
    <string name="destinationtwo">LYON</string>
    <string name="destinationthree">MARSEILLE</string>
    <string name="destinationfour">NANTES</string>
    <string name="destinationfive">TOULOUSE</string>
    <string name="destinationsix">STRASBOURG</string>
    <string name="image">IMAGE</string>
    <string name="description">Description</string>
</resources>