<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ville"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:layout_marginLeft="30dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <ImageButton
                        android:id="@+id/btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/paris">
                    </ImageButton>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destinationone"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:layout_marginLeft="30dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/btn1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/lyon">
                    </ImageButton>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destinationtwo"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:layout_marginLeft="30dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/btn2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/marseille">
                    </ImageButton>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destinationthree"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:layout_marginLeft="30dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/btn3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/nantes">
                    </ImageButton>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destinationfour"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:layout_marginLeft="30dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/btn4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/toulouse">
                    </ImageButton>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destinationfive"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:layout_marginLeft="30dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/btn5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/strasbourg1">
                    </ImageButton>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destinationsix"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>
            </androidx.cardview.widget.CardView>


        </GridLayout>
    </LinearLayout>
</ScrollView>